# React_Django_Inventory

./: .gitignore  README.md  docker-compose.yml
backend/: .env  Dockerfile  conftest.py  create_superuser.py  lint.sh  pyproject.toml  pytest.ini  requirements.txt  wait_for_db.py
backend/apps/companies/: models.py  serializers.py  tests.py  views.py
backend/apps/companies/migrations/: 0001_initial.py
backend/apps/inventories/: models.py  serializers.py  tests.py  utils.py  views.py
backend/apps/inventories/migrations/: 0001_initial.py
backend/apps/products/: models.py  serializers.py  tests.py  views.py
backend/apps/products/migrations/: 0001_initial.py
backend/apps/users/: models.py  serializers.py  tests.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/nginx/: Dockerfile  nginx.conf
backend/core/: permissions.py  settings.py  urls.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: MainLayout.tsx
frontend/src/pages/: DashboardPage.tsx
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/companies/: CompaniesPage.tsx  CompanyForm.tsx
frontend/src/pages/inventories/: InventoriesPage.tsx
frontend/src/pages/products/: ProductForm.tsx  ProductsPage.tsx
frontend/src/services/: authService.ts  companyService.ts  inventoryService.ts  productService.ts
